--- a/package.json
+++ b/package.json
@@ -5,12 +5,16 @@
     "dev": "nodemon server/app.js"
   },
   "dependencies": {
+    "aws-sdk": "^2.1604.0",
     "body-parser": "^1.20.2",
+    "colors": "^1.4.0",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.19.2",
+    "multer-s3": "^3.0.1",
     "nodemailer": "^6.9.13",
     "nodemon": "^3.1.0",
-    "path": "^0.12.7"
+    "path": "^0.12.7",
+    "pg": "^8.11.5"
   }
 }
